--- a/uni_modules/ucs-svg/package.json
+++ b/uni_modules/ucs-svg/package.json
@@ -2,13 +2,13 @@
 	"id": "ucs-svg",
 	"displayName": "ucs-svg 矢量图形",
 	"version": "1.0.0",
-	"description": "ucs-svg",
+	"description": "SVG 矢量图形组件是用于渲染和操作 SVG 资源",
 	"keywords": [
-		"ucs-svg,svg,矢量图形,vue3"
-	],
-	"repository": "",
+        "svg,矢量图形"
+    ],
+	"repository": "https://gitee.com/cloudsimpler/uni-ucs-design/tree/master/uni_modules/ucs-svg",
 	"engines": {
-		"HBuilderX": "^3.7.0"
+		"HBuilderX": "^4.24"
 	},
 	"dcloudext": {
 		"type": "component-uts",
@@ -21,12 +21,12 @@
 			}
 		},
 		"contact": {
-			"qq": ""
+			"qq": "1827239383"
 		},
 		"declaration": {
-			"ads": "",
-			"data": "",
-			"permissions": ""
+			"ads": "无",
+			"data": "插件不采集任何数据",
+			"permissions": "无"
 		},
 		"npmurl": ""
 	},
@@ -35,46 +35,50 @@
 		"encrypt": [],
 		"platforms": {
 			"cloud": {
-				"tcb": "u",
-				"aliyun": "u",
-				"alipay": "u"
+				"tcb": "y",
+				"aliyun": "y",
+				"alipay": "y"
 			},
 			"client": {
 				"Vue": {
-					"vue2": "u",
-					"vue3": "u"
+					"vue2": "y",
+					"vue3": "y"
 				},
 				"App": {
-					"app-android": "u",
-					"app-ios": "u"
+					"app-android": {
+                        "minVersion": "21"
+                    },
+					"app-ios": {
+                        "minVersion": "11"
+                    }
 				},
 				"H5-mobile": {
-					"Safari": "u",
-					"Android Browser": "u",
-					"微信浏览器(Android)": "u",
-					"QQ浏览器(Android)": "u"
+					"Safari": "y",
+					"Android Browser": "y",
+					"微信浏览器(Android)": "y",
+					"QQ浏览器(Android)": "y"
 				},
 				"H5-pc": {
-					"Chrome": "u",
-					"IE": "u",
-					"Edge": "u",
-					"Firefox": "u",
-					"Safari": "u"
+					"Chrome": "y",
+					"IE": "y",
+					"Edge": "y",
+					"Firefox": "y",
+					"Safari": "y"
 				},
 				"小程序": {
-					"微信": "u",
-					"阿里": "u",
-					"百度": "u",
-					"字节跳动": "u",
-					"QQ": "u",
-					"钉钉": "u",
-					"快手": "u",
-					"飞书": "u",
-					"京东": "u"
+					"微信": "y",
+					"阿里": "y",
+					"百度": "y",
+					"字节跳动": "y",
+					"QQ": "y",
+					"钉钉": "y",
+					"快手": "y",
+					"飞书": "y",
+					"京东": "y"
 				},
 				"快应用": {
-					"华为": "u",
-					"联盟": "u"
+					"华为": "y",
+					"联盟": "y"
 				}
 			}
 		}
