--- a/uni_modules/ucs-config/package.json
+++ b/uni_modules/ucs-config/package.json
@@ -1,14 +1,14 @@
 {
 	"id": "ucs-config",
-	"displayName": "ucs-config",
+	"displayName": "UCS Design 全局配置",
 	"version": "1.0.0",
-	"description": "ucs-config",
+	"description": "用于 UCS Design 生态链的所有组件库和扩展插件的全局配置项目",
 	"keywords": [
-		"ucs-config"
-	],
+        "ucs-config,全局配置"
+    ],
 	"repository": "",
 	"engines": {
-		"HBuilderX": "^3.6.8"
+		"HBuilderX": "^4.24"
 	},
 	"dcloudext": {
 		"type": "uts",
@@ -24,9 +24,9 @@
 			"qq": ""
 		},
 		"declaration": {
-			"ads": "",
-			"data": "",
-			"permissions": ""
+			"ads": "无",
+			"data": "插件不采集任何数据",
+			"permissions": "无"
 		},
 		"npmurl": ""
 	},
@@ -35,46 +35,46 @@
 		"encrypt": [],
 		"platforms": {
 			"cloud": {
-				"tcb": "u",
-				"aliyun": "u",
-				"alipay": "u"
+				"tcb": "y",
+				"aliyun": "y",
+				"alipay": "y"
 			},
 			"client": {
 				"Vue": {
-					"vue2": "u",
-					"vue3": "u"
+					"vue2": "n",
+					"vue3": "y"
 				},
 				"App": {
-					"app-android": "u",
-					"app-ios": "u"
+					"app-android": "y",
+					"app-ios": "y"
 				},
 				"H5-mobile": {
-					"Safari": "u",
-					"Android Browser": "u",
-					"微信浏览器(Android)": "u",
-					"QQ浏览器(Android)": "u"
+					"Safari": "y",
+					"Android Browser": "y",
+					"微信浏览器(Android)": "y",
+					"QQ浏览器(Android)": "y"
 				},
 				"H5-pc": {
-					"Chrome": "u",
-					"IE": "u",
-					"Edge": "u",
-					"Firefox": "u",
-					"Safari": "u"
+					"Chrome": "y",
+					"IE": "y",
+					"Edge": "y",
+					"Firefox": "y",
+					"Safari": "y"
 				},
 				"小程序": {
-					"微信": "u",
-					"阿里": "u",
-					"百度": "u",
-					"字节跳动": "u",
-					"QQ": "u",
-					"钉钉": "u",
-					"快手": "u",
-					"飞书": "u",
-					"京东": "u"
+					"微信": "y",
+					"阿里": "y",
+					"百度": "y",
+					"字节跳动": "y",
+					"QQ": "y",
+					"钉钉": "y",
+					"快手": "y",
+					"飞书": "y",
+					"京东": "y"
 				},
 				"快应用": {
-					"华为": "u",
-					"联盟": "u"
+					"华为": "y",
+					"联盟": "y"
 				}
 			}
 		}
