--- a/uni_modules/ucs-approve-status/package.json
+++ b/uni_modules/ucs-approve-status/package.json
@@ -31,7 +31,7 @@
 		"npmurl": ""
 	},
 	"uni_modules": {
-		"dependencies": ["ucs-svg"],
+		"dependencies": ["ucs-svg", "ucs-config"],
 		"encrypt": [],
 		"platforms": {
 			"cloud": {
