--- a/uni_modules/ucs-config/package.json
+++ b/uni_modules/ucs-config/package.json
@@ -31,7 +31,7 @@
 		"npmurl": ""
 	},
 	"uni_modules": {
-		"dependencies": ["ucs-color"],
+		"dependencies": [],
 		"encrypt": [],
 		"platforms": {
 			"cloud": {
