--- a/uni_modules/ucs-css/package.json
+++ b/uni_modules/ucs-css/package.json
@@ -1,7 +1,7 @@
 {
 	"id": "ucs-css",
 	"displayName": "ucs-css 原子化样式",
-	"version": "1.0.2",
+	"version": "1.0.3",
 	"description": "CSS原子化是一种将CSS样式分解为最小可复用单元的方法，每个类只包含单一的作用，例如只设置颜色、字体大小或边距。这种方式提高了样式的可维护性、可复用性和可读性，使得开发更加模块化和高效",
 	"keywords": [
         "css,原子化样式"
@@ -41,7 +41,7 @@
 			},
 			"client": {
 				"Vue": {
-					"vue2": "y",
+					"vue2": "n",
 					"vue3": "y"
 				},
 				"App": {
