--- a/uni_modules/ucs-color/package.json
+++ b/uni_modules/ucs-color/package.json
@@ -1,7 +1,7 @@
 {
   "id": "ucs-color",
   "displayName": "ucs-color 色彩",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "一个用于颜色处理的工具库，根据给定颜色通过算法生成指定包含十个颜色的梯度色板，也可生成暗色模式下包含十个颜色的色板",
   "keywords": [
     "color,颜色,颜色转换"
@@ -45,8 +45,9 @@
           "vue3": "y"
         },
         "App": {
-          "app-android": "y",
-          "app-ios": "y"
+            "app-android": "y",
+            "app-ios": "y",
+            "app-harmony": "u"
         },
         "H5-mobile": {
           "Safari": "y",
