--- a/uni_modules/ucs-config/package.json
+++ b/uni_modules/ucs-config/package.json
@@ -1,7 +1,7 @@
 {
 	"id": "ucs-config",
 	"displayName": "UCS Design 全局配置",
-	"version": "1.0.2",
+	"version": "1.0.3",
 	"description": "用于 UCS Design 生态链的所有组件库和扩展插件的全局配置项目",
 	"keywords": [
         "ucs-config,全局配置"
@@ -31,7 +31,7 @@
 		"npmurl": ""
 	},
 	"uni_modules": {
-		"dependencies": [],
+		"dependencies": ["ucs-color"],
 		"encrypt": [],
 		"platforms": {
 			"cloud": {
@@ -45,9 +45,10 @@
 					"vue3": "y"
 				},
 				"App": {
-					"app-android": "y",
-					"app-ios": "y"
-				},
+                    "app-android": "y",
+                    "app-ios": "y",
+                    "app-harmony": "u"
+                },
 				"H5-mobile": {
 					"Safari": "y",
 					"Android Browser": "y",
