--- a/uni_modules/ucs-svg/utssdk/app-ios/config.json
+++ b/uni_modules/ucs-svg/utssdk/app-ios/config.json
@@ -3,17 +3,8 @@
 	"validArchitectures": [
 		"arm64"
 	],
-	// 临时处理方案
 	"dependencies-pods": [{
 		"name": "SVGKit",
-		"repo": {
-			"git": "https://gitee.com/snicesoft/SVGKit.git",
-			"branch": "3.x"
-		}
+		"version": "3.0.0"
 	}]
-	// 原本方案，第三库SVGKit类名和unix框架内的类名冲突
-	// "dependencies-pods": [{
-	// 	"name": "SVGKit",
-	// 	"version": "3.0.0"
-	// }]
 }
