--- a/manifest.json
+++ b/manifest.json
@@ -1,46 +1,84 @@
 {
-    "name" : "uni-ucs-design",
-    "appid" : "__UNI__9799806",
-    "description" : "ucs-design开源演示项目",
-    "versionName" : "1.0.0",
-    "versionCode" : "100",
-    "uni-app-x" : {},
-    /* 快应用特有相关 */
-    "quickapp" : {},
-    /* 小程序特有相关 */
-    "mp-weixin" : {
-        "appid" : "",
-        "setting" : {
-            "urlCheck" : false
-        },
-        "usingComponents" : true
-    },
-    "mp-alipay" : {
-        "usingComponents" : true
-    },
-    "mp-baidu" : {
-        "usingComponents" : true
-    },
-    "mp-toutiao" : {
-        "usingComponents" : true
-    },
-    "uniStatistics" : {
-        "enable" : false
-    },
-    "vueVersion" : "3",
-    "app" : {
-        "distribute" : {
-            "icons" : {
-                "android" : {
-                    "hdpi" : "unpackage/res/icons/72x72.png",
-                    "xhdpi" : "unpackage/res/icons/96x96.png",
-                    "xxhdpi" : "unpackage/res/icons/144x144.png",
-                    "xxxhdpi" : "unpackage/res/icons/192x192.png"
-                },
-                "ios" : {
-                    "appstore" : "unpackage/res/icons/1024x1024.png"
-                }
-            }
-        }
-    }
+	"name": "uni-ucs-design",
+	"appid": "__UNI__9799806",
+	"description": "ucs-design开源演示项目",
+	"versionName": "1.0.0",
+	"versionCode": "100",
+	"uni-app-x": {},
+	/* 快应用特有相关 */
+	"quickapp": {},
+	/* 小程序特有相关 */
+	"mp-weixin": {
+		"darkmode": true,
+		"appid": "",
+		"setting": {
+			"urlCheck": false,
+			"postcss": true,
+			"minified": true
+		},
+		"usingComponents": true
+	},
+	"mp-alipay": {
+		"usingComponents": true
+	},
+	"mp-baidu": {
+		"usingComponents": true
+	},
+	"mp-toutiao": {
+		"usingComponents": true
+	},
+	"uniStatistics": {
+		"enable": false
+	},
+	"vueVersion": "3",
+	"app": {
+		"defaultAppTheme": "light",
+		"distribute": {
+			"icons": {
+				"android": {
+					"hdpi": "unpackage/res/icons/72x72.png",
+					"xhdpi": "unpackage/res/icons/96x96.png",
+					"xxhdpi": "unpackage/res/icons/144x144.png",
+					"xxxhdpi": "unpackage/res/icons/192x192.png"
+				},
+				"ios": {
+					"appstore": "unpackage/res/icons/1024x1024.png"
+				}
+			}
+		}
+	},
+	"app-android": {
+		"distribute": {
+			"modules": {},
+			"icons": {
+				"hdpi": "unpackage/res/icons/72x72.png",
+				"xhdpi": "unpackage/res/icons/96x96.png",
+				"xxhdpi": "unpackage/res/icons/144x144.png",
+				"xxxhdpi": "unpackage/res/icons/192x192.png"
+			},
+			"splashScreens": {
+				"default": {}
+			}
+		}
+	},
+	"app-ios": {
+		"distribute": {
+			"modules": {},
+			"icons": {
+				"appstore": "unpackage/res/icons/1024x1024.png"
+			},
+			"splashScreens": {}
+		}
+	},
+	"web": {
+		"darkmode": true,
+		"router": {
+			"mode": ""
+		},
+		"optimization": {
+			"treeShaking": {
+				"enable": true
+			}
+		}
+	}
 }
