--- a/uni_modules/ucs-config/package.json
+++ b/uni_modules/ucs-config/package.json
@@ -1,16 +1,16 @@
 {
   "id": "ucs-config",
   "displayName": "UCS Design 全局配置",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "用于 UCS Design 生态链的所有组件库和扩展插件的全局配置项目",
   "keywords": [
     "ucs-config,全局配置"
-  ],
+],
   "repository": "",
   "engines": {
     "HBuilderX": "^4.24",
-    "uni-app": "^3.1.0",
-    "uni-app-x": "^3.1.0"
+    "uni-app": "^4.66",
+    "uni-app-x": "^4.66"
   },
   "dcloudext": {
     "type": "uts",
@@ -31,9 +31,9 @@
       "permissions": "无"
     },
     "npmurl": "",
-    "darkmode": "-",
-    "i18n": "-",
-    "widescreen": "-"
+    "darkmode": "√",
+    "i18n": "√",
+    "widescreen": "√"
   },
   "uni_modules": {
     "dependencies": [
@@ -49,34 +49,34 @@
       "client": {
         "uni-app": {
           "vue": {
-            "vue2": "-",
-            "vue3": "-"
+            "vue2": "x",
+            "vue3": "√"
           },
           "web": {
-            "safari": "-",
-            "chrome": "-"
+            "safari": "√",
+            "chrome": "√"
           },
           "app": {
-            "vue": "-",
-            "nvue": "-",
-            "android": "-",
-            "ios": "-",
-            "harmony": "-"
+            "vue": "√",
+            "nvue": "√",
+            "android": "√",
+            "ios": "√",
+            "harmony": "√"
           },
           "mp": {
-            "weixin": "-",
-            "alipay": "-",
-            "toutiao": "-",
-            "baidu": "-",
-            "kuaishou": "-",
-            "jd": "-",
-            "harmony": "-",
-            "qq": "-",
-            "lark": "-"
+            "weixin": "√",
+            "alipay": "√",
+            "toutiao": "√",
+            "baidu": "√",
+            "kuaishou": "√",
+            "jd": "√",
+            "harmony": "√",
+            "qq": "√",
+            "lark": "√"
           },
           "quickapp": {
-            "huawei": "-",
-            "union": "-"
+            "huawei": "√",
+            "union": "√"
           }
         },
         "uni-app-x": {
