--- a/uni_modules/ucs-empty/package.json
+++ b/uni_modules/ucs-empty/package.json
@@ -1,80 +1,100 @@
 {
-	"id": "ucs-empty",
-	"displayName": "ucs-empty 缺省库",
-	"version": "1.0.0",
-	"description": "一套专为处理数据加载和空状态设计的UI组件，用于在应用中展示数据加载前的占位内容或无数据时的空状态。提供易于集成的占位符和空状态界面，以优化用户体验并保持应用界面的整洁与一致。",
-	"keywords": [
-        "empty,缺省页,为空页"
+  "id": "ucs-empty",
+  "displayName": "ucs-empty 缺省库",
+  "version": "1.0.1",
+  "description": "一套专为处理数据加载和空状态设计的UI组件，用于在应用中展示数据加载前的占位内容或无数据时的空状态。提供易于集成的占位符和空状态界面，以优化用户体验并保持应用界面的整洁与一致。",
+  "keywords": [
+    "empty,缺省页,为空页"
+],
+  "repository": "https://gitee.com/cloudsimpler/uni-ucs-design/tree/master/uni_modules/ucs-empty",
+  "engines": {
+    "HBuilderX": "^4.24",
+    "uni-app": "^4.66",
+    "uni-app-x": "^4.66"
+  },
+  "dcloudext": {
+    "type": "component-vue",
+    "sale": {
+      "regular": {
+        "price": "0.00"
+      },
+      "sourcecode": {
+        "price": "0.00"
+      }
+    },
+    "contact": {
+      "qq": ""
+    },
+    "declaration": {
+      "ads": "无",
+      "data": "插件不采集任何数据",
+      "permissions": "无"
+    },
+    "npmurl": "",
+    "darkmode": "√",
+    "i18n": "√",
+    "widescreen": "√"
+  },
+  "uni_modules": {
+    "dependencies": [
+      "ucs-svg",
+      "ucs-config"
     ],
-	"repository": "",
-	"engines": {
-		"HBuilderX": "^4.24"
-	},
-	"dcloudext": {
-		"type": "component-vue",
-		"sale": {
-			"regular": {
-				"price": "0.00"
-			},
-			"sourcecode": {
-				"price": "0.00"
-			}
-		},
-		"contact": {
-			"qq": ""
-		},
-		"declaration": {
-			"ads": "无",
-			"data": "插件不采集任何数据",
-			"permissions": "无"
-		},
-		"npmurl": ""
-	},
-	"uni_modules": {
-		"dependencies": ["ucs-svg", "ucs-config"],
-		"encrypt": [],
-		"platforms": {
-			"cloud": {
-				"tcb": "y",
-				"aliyun": "y",
-				"alipay": "y"
-			},
-			"client": {
-				"Vue": {
-					"vue2": "n",
-					"vue3": "y"
-				},
-                "App": {
-				},
-				"H5-mobile": {
-					"Safari": "y",
-					"Android Browser": "y",
-					"微信浏览器(Android)": "y",
-					"QQ浏览器(Android)": "y"
-				},
-				"H5-pc": {
-					"Chrome": "y",
-					"IE": "y",
-					"Edge": "y",
-					"Firefox": "y",
-					"Safari": "y"
-				},
-				"小程序": {
-					"微信": "y",
-					"阿里": "y",
-					"百度": "y",
-					"字节跳动": "y",
-					"QQ": "y",
-					"钉钉": "y",
-					"快手": "y",
-					"飞书": "y",
-					"京东": "y"
-				},
-				"快应用": {
-					"华为": "y",
-					"联盟": "y"
-				}
-			}
-		}
-	}
+    "encrypt": [],
+    "platforms": {
+      "cloud": {
+        "tcb": "√",
+        "aliyun": "√",
+        "alipay": "√"
+      },
+      "client": {
+        "uni-app": {
+          "vue": {
+            "vue2": "x",
+            "vue3": "√"
+          },
+          "web": {
+            "safari": "√",
+            "chrome": "√"
+          },
+          "app": {
+            "vue": "√",
+            "nvue": "√",
+            "android": "√",
+            "ios": "√",
+            "harmony": "√"
+          },
+          "mp": {
+            "weixin": "√",
+            "alipay": "√",
+            "toutiao": "√",
+            "baidu": "√",
+            "kuaishou": "√",
+            "jd": "√",
+            "harmony": "√",
+            "qq": "√",
+            "lark": "√"
+          },
+          "quickapp": {
+            "huawei": "√",
+            "union": "√"
+          }
+        },
+        "uni-app-x": {
+          "web": {
+            "safari": "√",
+            "chrome": "√"
+          },
+          "app": {
+            "android": "√",
+            "ios": "√",
+            "harmony": "√"
+          },
+          "mp": {
+            "weixin": "√"
+          }
+        }
+      }
+    }
+  }
 }
