--- a/uni_modules/ucs-config/package.json
+++ b/uni_modules/ucs-config/package.json
@@ -81,16 +81,16 @@
         },
         "uni-app-x": {
           "web": {
-            "safari": "-",
-            "chrome": "-"
+            "safari": "√",
+            "chrome": "√"
           },
           "app": {
-            "android": "-",
-            "ios": "-",
-            "harmony": "-"
+            "android": "√",
+            "ios": "√",
+            "harmony": "√"
           },
           "mp": {
-            "weixin": "-"
+            "weixin": "√"
           }
         }
       }
