请求库、配置库更新

--- a/uni_modules/ucs-config/package.json
+++ b/uni_modules/ucs-config/package.json
@@ -36,9 +36,7 @@
     "widescreen": "√"
   },
   "uni_modules": {
-    "dependencies": [
-      "ucs-color"
-    ],
+    "dependencies": [],
     "encrypt": [],
     "platforms": {
       "cloud": {
