--- a/uni_modules/ucs-config/package.json
+++ b/uni_modules/ucs-config/package.json
@@ -1,97 +1,97 @@
 {
-  "id": "ucs-config",
-  "displayName": "UCS Design 全局配置",
-  "version": "1.0.6",
-  "description": "用于 UCS Design 生态链的所有组件库和扩展插件的全局配置项目",
-  "keywords": [
-    "ucs-config,全局配置"
-],
-  "repository": "",
-  "engines": {
-    "HBuilderX": "^4.24",
-    "uni-app": "^4.66",
-    "uni-app-x": "^4.66"
-  },
-  "dcloudext": {
-    "type": "uts",
-    "sale": {
-      "regular": {
-        "price": "0.00"
-      },
-      "sourcecode": {
-        "price": "0.00"
-      }
-    },
-    "contact": {
-      "qq": ""
-    },
-    "declaration": {
-      "ads": "无",
-      "data": "插件不采集任何数据",
-      "permissions": "无"
-    },
-    "npmurl": "",
-    "darkmode": "√",
-    "i18n": "√",
-    "widescreen": "√"
-  },
-  "uni_modules": {
-    "dependencies": [],
-    "encrypt": [],
-    "platforms": {
-      "cloud": {
-        "tcb": "√",
-        "aliyun": "√",
-        "alipay": "√"
-      },
-      "client": {
-        "uni-app": {
-          "vue": {
-            "vue2": "x",
-            "vue3": "√"
-          },
-          "web": {
-            "safari": "√",
-            "chrome": "√"
-          },
-          "app": {
-            "vue": "√",
-            "nvue": "√",
-            "android": "√",
-            "ios": "√",
-            "harmony": "√"
-          },
-          "mp": {
-            "weixin": "√",
-            "alipay": "√",
-            "toutiao": "√",
-            "baidu": "√",
-            "kuaishou": "√",
-            "jd": "√",
-            "harmony": "√",
-            "qq": "√",
-            "lark": "√"
-          },
-          "quickapp": {
-            "huawei": "√",
-            "union": "√"
-          }
-        },
-        "uni-app-x": {
-          "web": {
-            "safari": "√",
-            "chrome": "√"
-          },
-          "app": {
-            "android": "√",
-            "ios": "√",
-            "harmony": "√"
-          },
-          "mp": {
-            "weixin": "√"
-          }
-        }
-      }
-    }
-  }
+	"id": "ucs-config",
+	"displayName": "UCS Design 全局配置",
+	"version": "1.0.7",
+	"description": "用于 UCS Design 生态链的所有组件库和扩展插件的全局配置项目",
+	"keywords": [
+        "ucs-config,全局配置"
+    ],
+	"repository": "",
+	"engines": {
+		"HBuilderX": "^4.24",
+		"uni-app": "^4.66",
+		"uni-app-x": "^4.66"
+	},
+	"dcloudext": {
+		"type": "uts",
+		"sale": {
+			"regular": {
+				"price": "0.00"
+			},
+			"sourcecode": {
+				"price": "0.00"
+			}
+		},
+		"contact": {
+			"qq": ""
+		},
+		"declaration": {
+			"ads": "无",
+			"data": "插件不采集任何数据",
+			"permissions": "无"
+		},
+		"npmurl": "",
+		"darkmode": "√",
+		"i18n": "√",
+		"widescreen": "√"
+	},
+	"uni_modules": {
+		"dependencies": ["ucs-color"],
+		"encrypt": [],
+		"platforms": {
+			"cloud": {
+				"tcb": "√",
+				"aliyun": "√",
+				"alipay": "√"
+			},
+			"client": {
+				"uni-app": {
+					"vue": {
+						"vue2": "x",
+						"vue3": "√"
+					},
+					"web": {
+						"safari": "√",
+						"chrome": "√"
+					},
+					"app": {
+						"vue": "√",
+						"nvue": "√",
+						"android": "√",
+						"ios": "√",
+						"harmony": "√"
+					},
+					"mp": {
+						"weixin": "√",
+						"alipay": "√",
+						"toutiao": "√",
+						"baidu": "√",
+						"kuaishou": "√",
+						"jd": "√",
+						"harmony": "√",
+						"qq": "√",
+						"lark": "√"
+					},
+					"quickapp": {
+						"huawei": "√",
+						"union": "√"
+					}
+				},
+				"uni-app-x": {
+					"web": {
+						"safari": "√",
+						"chrome": "√"
+					},
+					"app": {
+						"android": "√",
+						"ios": "√",
+						"harmony": "√"
+					},
+					"mp": {
+						"weixin": "√"
+					}
+				}
+			}
+		}
+	}
 }
