--- a/manifest.json
+++ b/manifest.json
@@ -9,12 +9,9 @@
 	"quickapp": {},
 	/* 小程序特有相关 */
 	"mp-weixin": {
-		"darkmode": true,
-		"appid": "wx8bcdad82ef2abcc9",
+		"appid": "",
 		"setting": {
-			"urlCheck": false,
-			"postcss": true,
-			"minified": true
+			"urlCheck": false
 		},
 		"usingComponents": true
 	},
@@ -32,17 +29,13 @@
 	},
 	"vueVersion": "3",
 	"app": {
-		"defaultAppTheme": "light",
 		"distribute": {
 			"icons": {
 				"android": {
-					"hdpi": "unpackage/res/icons/72x72.png",
-					"xhdpi": "unpackage/res/icons/96x96.png",
-					"xxhdpi": "unpackage/res/icons/144x144.png",
-					"xxxhdpi": "unpackage/res/icons/192x192.png"
-				},
-				"ios": {
-					"appstore": "unpackage/res/icons/1024x1024.png"
+					"hdpi": "",
+					"xhdpi": "",
+					"xxhdpi": "",
+					"xxxhdpi": ""
 				}
 			}
 		}
@@ -51,10 +44,10 @@
 		"distribute": {
 			"modules": {},
 			"icons": {
-				"hdpi": "unpackage/res/icons/72x72.png",
-				"xhdpi": "unpackage/res/icons/96x96.png",
-				"xxhdpi": "unpackage/res/icons/144x144.png",
-				"xxxhdpi": "unpackage/res/icons/192x192.png"
+				"hdpi": "",
+				"xhdpi": "",
+				"xxhdpi": "",
+				"xxxhdpi": ""
 			},
 			"splashScreens": {
 				"default": {}
@@ -64,21 +57,13 @@
 	"app-ios": {
 		"distribute": {
 			"modules": {},
-			"icons": {
-				"appstore": "unpackage/res/icons/1024x1024.png"
-			},
+			"icons": {},
 			"splashScreens": {}
 		}
 	},
 	"web": {
-		"darkmode": true,
 		"router": {
 			"mode": ""
-		},
-		"optimization": {
-			"treeShaking": {
-				"enable": true
-			}
 		}
 	}
 }
